# studentsDataBaseLab1

./: CMakeLists.txt  Makefile  main.cpp  student.cpp  student.h  test_student.cpp
.github/workflows/: main.yml
